packages/pya2ldb/pya2ldb-0.12.90-cp310-cp310-macosx_10_9_x86_64.whl/pya2l/amlParser.py
# Generated from pya2l/aml.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class amlParser ( Parser ):

    grammarFileName = "aml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/begin'", "'A2ML'", "'/end'", "';'", 
                     "'char'", "'int'", "'long'", "'uchar'", "'uint'", "'ulong'", 
                     "'double'", "'float'", "'block'", "'('", "')'", "'*'", 
                     "'enum'", "'{'", "'}'", "','", "'='", "'struct'", "'['", 
                     "']'", "'taggedstruct'", "'taggedunion'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "TAG", 
                      "INT", "HEX", "FLOAT", "COMMENT", "WS", "STRING" ]

    RULE_amlFile = 0
    RULE_declaration = 1
    RULE_type_definition = 2
    RULE_type_name = 3
    RULE_predefined_type_name = 4
    RULE_block_definition = 5
    RULE_enum_type_name = 6
    RULE_enumerator_list = 7
    RULE_enumerator = 8
    RULE_struct_type_name = 9
    RULE_struct_member = 10
    RULE_member = 11
    RULE_array_specifier = 12
    RULE_taggedstruct_type_name = 13
    RULE_taggedstruct_member = 14
    RULE_taggedstruct_definition = 15
    RULE_taggedunion_type_name = 16
    RULE_tagged_union_member = 17
    RULE_numericValue = 18
    RULE_stringValue = 19
    RULE_tagValue = 20
    RULE_identifierValue = 21

    ruleNames =  [ "amlFile", "declaration", "type_definition", "type_name", 
                   "predefined_type_name", "block_definition", "enum_type_name", 
                   "enumerator_list", "enumerator", "struct_type_name", 
                   "struct_member", "member", "array_specifier", "taggedstruct_type_name", 
                   "taggedstruct_member", "taggedstruct_definition", "taggedunion_type_name", 
                   "tagged_union_member", "numericValue", "stringValue", 
                   "tagValue", "identifierValue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    ID=27
    TAG=28
    INT=29
    HEX=30
    FLOAT=31
    COMMENT=32
    WS=33
    STRING=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AmlFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._declaration = None # DeclarationContext
            self.d = list() # of DeclarationContexts

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amlParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(amlParser.DeclarationContext,i)


        def getRuleIndex(self):
            return amlParser.RULE_amlFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAmlFile" ):
                listener.enterAmlFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAmlFile" ):
                listener.exitAmlFile(self)




    def amlFile(self):

        localctx = amlParser.AmlFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_amlFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(amlParser.T__0)
            self.state = 45
            self.match(amlParser.T__1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amlParser.T__4) | (1 << amlParser.T__5) | (1 << amlParser.T__6) | (1 << amlParser.T__7) | (1 << amlParser.T__8) | (1 << amlParser.T__9) | (1 << amlParser.T__10) | (1 << amlParser.T__11) | (1 << amlParser.T__12) | (1 << amlParser.T__13) | (1 << amlParser.T__16) | (1 << amlParser.T__21) | (1 << amlParser.T__24) | (1 << amlParser.T__25) | (1 << amlParser.TAG))) != 0):
                self.state = 46
                localctx._declaration = self.declaration()
                localctx.d.append(localctx._declaration)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(amlParser.T__2)
            self.state = 53
            self.match(amlParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # Type_definitionContext
            self.b = None # Block_definitionContext

        def type_definition(self):
            return self.getTypedRuleContext(amlParser.Type_definitionContext,0)


        def block_definition(self):
            return self.getTypedRuleContext(amlParser.Block_definitionContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = amlParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amlParser.T__4, amlParser.T__5, amlParser.T__6, amlParser.T__7, amlParser.T__8, amlParser.T__9, amlParser.T__10, amlParser.T__11, amlParser.T__16, amlParser.T__21, amlParser.T__24, amlParser.T__25, amlParser.TAG]:
                self.state = 55
                localctx.t = self.type_definition()
                pass
            elif token in [amlParser.T__12, amlParser.T__13]:
                self.state = 56
                localctx.b = self.block_definition()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 59
            self.match(amlParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(amlParser.Type_nameContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_type_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_definition" ):
                listener.enterType_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_definition" ):
                listener.exitType_definition(self)




    def type_definition(self):

        localctx = amlParser.Type_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.type_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # TagValueContext
            self.pr = None # Predefined_type_nameContext
            self.st = None # Struct_type_nameContext
            self.ts = None # Taggedstruct_type_nameContext
            self.tu = None # Taggedunion_type_nameContext
            self.en = None # Enum_type_nameContext

        def predefined_type_name(self):
            return self.getTypedRuleContext(amlParser.Predefined_type_nameContext,0)


        def struct_type_name(self):
            return self.getTypedRuleContext(amlParser.Struct_type_nameContext,0)


        def taggedstruct_type_name(self):
            return self.getTypedRuleContext(amlParser.Taggedstruct_type_nameContext,0)


        def taggedunion_type_name(self):
            return self.getTypedRuleContext(amlParser.Taggedunion_type_nameContext,0)


        def enum_type_name(self):
            return self.getTypedRuleContext(amlParser.Enum_type_nameContext,0)


        def tagValue(self):
            return self.getTypedRuleContext(amlParser.TagValueContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_name" ):
                listener.enterType_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_name" ):
                listener.exitType_name(self)




    def type_name(self):

        localctx = amlParser.Type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==amlParser.TAG:
                self.state = 63
                localctx.t = self.tagValue()


            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amlParser.T__4, amlParser.T__5, amlParser.T__6, amlParser.T__7, amlParser.T__8, amlParser.T__9, amlParser.T__10, amlParser.T__11]:
                self.state = 66
                localctx.pr = self.predefined_type_name()
                pass
            elif token in [amlParser.T__21]:
                self.state = 67
                localctx.st = self.struct_type_name()
                pass
            elif token in [amlParser.T__24]:
                self.state = 68
                localctx.ts = self.taggedstruct_type_name()
                pass
            elif token in [amlParser.T__25]:
                self.state = 69
                localctx.tu = self.taggedunion_type_name()
                pass
            elif token in [amlParser.T__16]:
                self.state = 70
                localctx.en = self.enum_type_name()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predefined_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token


        def getRuleIndex(self):
            return amlParser.RULE_predefined_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredefined_type_name" ):
                listener.enterPredefined_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredefined_type_name" ):
                listener.exitPredefined_type_name(self)




    def predefined_type_name(self):

        localctx = amlParser.Predefined_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predefined_type_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amlParser.T__4]:
                self.state = 73
                localctx.name = self.match(amlParser.T__4)
                pass
            elif token in [amlParser.T__5]:
                self.state = 74
                localctx.name = self.match(amlParser.T__5)
                pass
            elif token in [amlParser.T__6]:
                self.state = 75
                localctx.name = self.match(amlParser.T__6)
                pass
            elif token in [amlParser.T__7]:
                self.state = 76
                localctx.name = self.match(amlParser.T__7)
                pass
            elif token in [amlParser.T__8]:
                self.state = 77
                localctx.name = self.match(amlParser.T__8)
                pass
            elif token in [amlParser.T__9]:
                self.state = 78
                localctx.name = self.match(amlParser.T__9)
                pass
            elif token in [amlParser.T__10]:
                self.state = 79
                localctx.name = self.match(amlParser.T__10)
                pass
            elif token in [amlParser.T__11]:
                self.state = 80
                localctx.name = self.match(amlParser.T__11)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tag = None # TagValueContext
            self.tn = None # Type_nameContext
            self.mem = None # MemberContext
            self.mult = None # Token

        def tagValue(self):
            return self.getTypedRuleContext(amlParser.TagValueContext,0)


        def type_name(self):
            return self.getTypedRuleContext(amlParser.Type_nameContext,0)


        def member(self):
            return self.getTypedRuleContext(amlParser.MemberContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_block_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_definition" ):
                listener.enterBlock_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_definition" ):
                listener.exitBlock_definition(self)




    def block_definition(self):

        localctx = amlParser.Block_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block_definition)
        self._la = 0 # Token type
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amlParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(amlParser.T__12)
                self.state = 84
                localctx.tag = self.tagValue()
                self.state = 85
                localctx.tn = self.type_name()
                pass
            elif token in [amlParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(amlParser.T__13)
                self.state = 88
                localctx.mem = self.member()
                self.state = 89
                self.match(amlParser.T__14)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amlParser.T__15:
                    self.state = 90
                    localctx.mult = self.match(amlParser.T__15)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t0 = None # IdentifierValueContext
            self.l = None # Enumerator_listContext
            self.t1 = None # IdentifierValueContext

        def enumerator_list(self):
            return self.getTypedRuleContext(amlParser.Enumerator_listContext,0)


        def identifierValue(self):
            return self.getTypedRuleContext(amlParser.IdentifierValueContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_enum_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_type_name" ):
                listener.enterEnum_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_type_name" ):
                listener.exitEnum_type_name(self)




    def enum_type_name(self):

        localctx = amlParser.Enum_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_enum_type_name)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(amlParser.T__16)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amlParser.ID:
                    self.state = 96
                    localctx.t0 = self.identifierValue()


                self.state = 99
                self.match(amlParser.T__17)
                self.state = 100
                localctx.l = self.enumerator_list()
                self.state = 101
                self.match(amlParser.T__18)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(amlParser.T__16)
                self.state = 104
                localctx.t1 = self.identifierValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enumerator_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._enumerator = None # EnumeratorContext
            self.ids = list() # of EnumeratorContexts

        def enumerator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amlParser.EnumeratorContext)
            else:
                return self.getTypedRuleContext(amlParser.EnumeratorContext,i)


        def getRuleIndex(self):
            return amlParser.RULE_enumerator_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerator_list" ):
                listener.enterEnumerator_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerator_list" ):
                listener.exitEnumerator_list(self)




    def enumerator_list(self):

        localctx = amlParser.Enumerator_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enumerator_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            localctx._enumerator = self.enumerator()
            localctx.ids.append(localctx._enumerator)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==amlParser.T__19:
                self.state = 108
                self.match(amlParser.T__19)
                self.state = 109
                localctx._enumerator = self.enumerator()
                localctx.ids.append(localctx._enumerator)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumeratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # TagValueContext
            self.c = None # NumericValueContext

        def tagValue(self):
            return self.getTypedRuleContext(amlParser.TagValueContext,0)


        def numericValue(self):
            return self.getTypedRuleContext(amlParser.NumericValueContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_enumerator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerator" ):
                listener.enterEnumerator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerator" ):
                listener.exitEnumerator(self)




    def enumerator(self):

        localctx = amlParser.EnumeratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enumerator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            localctx.t = self.tagValue()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==amlParser.T__20:
                self.state = 116
                self.match(amlParser.T__20)
                self.state = 117
                localctx.c = self.numericValue()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t0 = None # IdentifierValueContext
            self._struct_member = None # Struct_memberContext
            self.l = list() # of Struct_memberContexts
            self.t1 = None # IdentifierValueContext

        def identifierValue(self):
            return self.getTypedRuleContext(amlParser.IdentifierValueContext,0)


        def struct_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amlParser.Struct_memberContext)
            else:
                return self.getTypedRuleContext(amlParser.Struct_memberContext,i)


        def getRuleIndex(self):
            return amlParser.RULE_struct_type_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_type_name" ):
                listener.enterStruct_type_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_type_name" ):
                listener.exitStruct_type_name(self)




    def struct_type_name(self):

        localctx = amlParser.Struct_type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_type_name)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(amlParser.T__21)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amlParser.ID:
                    self.state = 121
                    localctx.t0 = self.identifierValue()


                self.state = 124
                self.match(amlParser.T__17)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amlParser.T__4) | (1 << amlParser.T__5) | (1 << amlParser.T__6) | (1 << amlParser.T__7) | (1 << amlParser.T__8) | (1 << amlParser.T__9) | (1 << amlParser.T__10) | (1 << amlParser.T__11) | (1 << amlParser.T__13) | (1 << amlParser.T__16) | (1 << amlParser.T__21) | (1 << amlParser.T__24) | (1 << amlParser.T__25) | (1 << amlParser.TAG))) != 0):
                    self.state = 125
                    localctx._struct_member = self.struct_member()
                    localctx.l.append(localctx._struct_member)
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 131
                self.match(amlParser.T__18)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(amlParser.T__21)
                self.state = 133
                localctx.t1 = self.identifierValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.m = None # MemberContext
            self.mstar = None # MemberContext
            self.m0 = None # Token

        def member(self):
            return self.getTypedRuleContext(amlParser.MemberContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_struct_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_member" ):
                listener.enterStruct_member(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_member" ):
                listener.exitStruct_member(self)




    def struct_member(self):

        localctx = amlParser.Struct_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_struct_member)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amlParser.T__4, amlParser.T__5, amlParser.T__6, amlParser.T__7, amlParser.T__8, amlParser.T__9, amlParser.T__10, amlParser.T__11, amlParser.T__16, amlParser.T__21, amlParser.T__24, amlParser.T__25, amlParser.TAG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                localctx.m = self.member()
                self.state = 137
                self.match(amlParser.T__3)
                pass
            elif token in [amlParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(amlParser.T__13)
                self.state = 140
                localctx.mstar = self.member()
                self.state = 141
                self.match(amlParser.T__14)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amlParser.T__15:
                    self.state = 142
                    localctx.m0 = self.match(amlParser.T__15)


                self.state = 145
                self.match(amlParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.t = None # Type_nameContext
            self._array_specifier = None # Array_specifierContext
            self.a = list() # of Array_specifierContexts

        def type_name(self):
            return self.getTypedRuleContext(amlParser.Type_nameContext,0)


        def array_specifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amlParser.Array_specifierContext)
            else:
                return self.getTypedRuleContext(amlParser.Array_specifierContext,i)


        def getRuleIndex(self):
            return amlParser.RULE_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember" ):
                listener.enterMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember" ):
                listener.exitMember(self)




    def member(self):

        localctx = amlParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_member)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            localctx.t = self.type_name()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==amlParser.T__22:
                self.state = 150
                localctx._array_specifier = self.array_specifier()
                localctx.a.append(localctx._array_specifier)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.c = None # NumericValueContext

        def numericValue(self):
            return self.getTypedRuleContext(amlParser.NumericValueContext,0)


        def getRuleIndex(self):
            return amlParser.RULE_array_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_specifier" ):
                listener.enterArray_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_specifier" ):
                listener.exitArray_specifier(self)




    def array_specifier(self):
